fixed the alignment of cards and readmore button

--- a/AGAC/src/styles/Navbar.css
+++ b/AGAC/src/styles/Navbar.css
@@ -55,12 +55,12 @@
 }
 
 .nav li {
-<<<<<<< HEAD
+
   margin-right: 20px;
-=======
-    margin-right: 20px;
+
+    
     list-style: none;
->>>>>>> 117334526581dc7019668c356051a126f179a2dd
+
 }
 
 .contact-us {
